src/Components/Menu/menu.module.css
.menu{
    width: 300px;
    background-color: rgb(83, 83, 83);
    position: absolute;
    height: 0;
    transition: height .3s ease;
    overflow: hidden;
}

.menu.show{
    height: calc(100vh - 60px);
    transition: height .3s ease .3s;
}

